reformat everything